--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" type="imagem/png" href="imagens/iconStarzilla.png">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+	<script src="javascript/prefixfree.min.js"></script>
+	<script src="javascript/jquery.min.js"></script>
   <script src="javascript/script.js"></script>
 </head>
 <body> 
