--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" type="imagem/png" href="imagens/iconStarzilla.png">
-	<link rel=”stylesheet” href=”https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link rel=”stylesheet” href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<script src="javascript/prefixfree.min.js"></script>
 	<script src="javascript/jquery.min.js"></script>
   <script src="javascript/script.js"></script>
