--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Starzilla|Ohana Team</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" type="imagem/png" href="imagens/iconStarzilla.png">
-	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+	<script src='javascript/jquery.min.js'></script>
  	<script src="javascript/script.js"></script>
  </head>
 <body> 
