--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Starzilla|Ohana Team</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" type="imagem/png" href="imagens/iconStarzilla.png">
+	<script src="javascript/prefixfree.min.js"></script>
 	<script src='javascript/jquery.min.js'></script>
  	<script src="javascript/script.js"></script>
  </head>
